# try-tensorflow

./: .gitignore  README.md  pyproject.toml
docs/: math.md
notebooks/: 01_basics_graphs_and_functions.ipynb  02_training.ipynb  03_penguin_neural_classifier.ipynb  04_why_ReLU.ipynb  coords_demo.ipynb  training_loop_from_scratch.ipynb
notebooks/Generative/: 01 - Style Transfer.ipynb
notebooks/Keras-Guides/: 02 - Functional API.ipynb
notebooks/Text/: Word Embeddings.ipynb
notebooks/retry-2024/: 01_basics.ipynb  02_custom_training_walkthrough.ipynb  03_sequential.ipynb  05_builtin_training_loop.ipynb
try_tensorflow/: coords_demo.py  model_visualizer_2d.py
