[tool.poetry]
name = "try-tensorflow"
version = "0.1.0"
description = ""
authors = ["Stepan Anokhin <stepan.anokhin@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
opencv-python = "4.5.4.60"
numpy = "^1.23.4"
luigi = "^3.1.1"
matplotlib = "^3.6.1"
PyQt5 = "^5.15.7"
tensorflow = "^2.10.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
