[tool.poetry]
name = "try-tensorflow"
version = "0.1.0"
description = ""
authors = ["Stepan Anokhin <stepan.anokhin@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
opencv-python = "4.5.4.60"
numpy = "^1.23.4"
luigi = "^3.1.1"
matplotlib = "^3.6.1"
PyQt5 = "^5.15.7"
tensorflow = "^2.10.0"
jupyter = "^1.0.0"
importlib-resources = "^5.10.0"
zipp = "^3.10.0"
importlib-metadata = "^5.0.0"
tfds-nightly = "^4.7.0-alpha.202211030046"
pandas = "^1.5.1"
umap-learn = "^0.5.3"
pacmap = "^0.6.5"
trimap = "^1.1.4"
scikit-learn = "^1.1.3"
ipywidgets = "^8.0.2"
pydot = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
